Updated sidebar and board header structure

--- a/index.html
+++ b/index.html
@@ -22,3 +22,16 @@
         </div>
       </div>
     </aside>
+
+      <!-- Main Content -->
+    <div class="board">
+      <header class="board__header">
+  <div class="board__title-wrapper">
+    <h2 class="board__title board__title--desktop">Launch Career</h2>
+    <div class="board__title--mobile">
+      <img src="assets/favicon.svg" alt="Kanban Logo" class="board__mobile-logo" />
+      <h2 class="board__mobile-text">Kanban</h2>
+    </div>
+  </div>
+</header>
+  
