Added ToDo column list with tasks

--- a/index.html
+++ b/index.html
@@ -35,3 +35,17 @@
   </div>
 </header>
   
+  <main class="board__columns">
+        <!-- To Do -->
+        <section class="column">
+          <div class="column__header">
+            <span class="column__status-dot column__status-dot--todo"></span>
+            <h4 class="column__title">ToDo <span class="column__count">(4)</span></h4>
+          </div>
+          <div class="column__task-list">
+            <div class="task-card">Launch Epic Career 🚀</div>
+            <div class="task-card">Conquer React 🧠</div>
+            <div class="task-card">Understand Databases ⚙️</div>
+            <div class="task-card">Crush Frameworks 🟩</div>
+          </div>
+        </section>
