Added InProgress column list

--- a/index.html
+++ b/index.html
@@ -49,3 +49,15 @@
             <div class="task-card">Crush Frameworks 🟩</div>
           </div>
         </section>
+
+             <!-- In Progress -->
+        <section class="column">
+          <div class="column__header">
+            <span class="column__status-dot column__status-dot--doing"></span>
+            <h4 class="column__title">In Progress <span class="column__count">(2)</span></h4>
+          </div>
+          <div class="column__task-list">
+            <div class="task-card">Master JavaScript 💛</div>
+            <div class="task-card">Never Give Up 🏆</div>
+          </div>
+        </section>
