Added Done column with status

--- a/index.html
+++ b/index.html
@@ -61,3 +61,20 @@
             <div class="task-card">Never Give Up 🏆</div>
           </div>
         </section>
+
+          <!-- Done -->
+        <section class="column">
+          <div class="column__header">
+            <span class="column__status-dot column__status-dot--done"></span>
+            <h4 class="column__title">Done <span class="column__count">(2)</span></h4>
+          </div>
+          <div class="column__task-list">
+            <div class="task-card">Explore ES6 Features 🚀</div>
+            <div class="task-card">Have fun 🤩</div>
+          </div>
+        </section>
+      </main>
+    </div>
+  </body>
+</html>
+
